--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.active{
+    background-color: #f0932b;
+    padding: 6px 12px;
+    color:white;
+    font-weight:700;
+    letter-spacing:2px;
+    font-size:18px
+}
